# IRIS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  NOTICE.txt  README.md  vcpkg.json
.github/workflows/: build.yml  c-cpp.yml
cmake/: Coverage.cmake  gcov-llvm-wrapper.sh
config/: appsettings.json
example/: CMakeLists.txt  appsettings.json  main.cpp
include/iris/: Configuration.h  FrameData.h  Log.h  Result.h  ScopeProfiler.h  TotalFlashIncidents.h  VideoAnalyser.h
ports/aws-lambda-cpp/: portfile.cmake  portfile.cmake.template  vcpkg.json
ports/cpputils/: portfile.cmake  portfile.cmake.template  usage  vcpkg.json
src/: CDLuminance.cpp  CDLuminance.h  Configuration.cpp  ConfigurationParams.h  Flash.cpp  Flash.h  FlashDetection.cpp  FlashDetection.h  FpsFrameManager.cpp  FpsFrameManager.h  FrameData.h  FrameRgbConverter.cpp  FrameRgbConverter.h  IFrameManager.h  IrisFrame.h  Log.cpp  PatternDetection.cpp  PatternDetection.h  PhotosensitivityDetector.h  RedSaturation.cpp  RedSaturation.h  RelativeLuminance.cpp  RelativeLuminance.h  ScopeProfiler.cpp  TimeFrameManager.cpp  TimeFrameManager.h  TransitionEvaluator.cpp  TransitionEvaluator.h  TransitionTracker.cpp  TransitionTracker.h  TransitionTrackerByFPS.cpp  TransitionTrackerByFPS.h  TransitionTrackerByTime.cpp  TransitionTrackerByTime.h  VideoAnalyser.cpp
test/AddressSanitizer.Tests/: CMakeLists.txt
test/AddressSanitizer.Tests/include/: AddressSanitizerTest.h
test/AddressSanitizer.Tests/src/: AddressSanitizerTest.cpp
test/Iris.Tests/: CMakeLists.txt  appsettings.json
test/Iris.Tests/data/ExpectedVideoLogFiles/: 2Hz_5s_RELATIVE.csv  2Hz_6s_RELATIVE.csv  3Hz_6s_RELATIVE.csv  GradualRedIncrease_RELATIVE.csv  Hypno Spiral Small_RELATIVE.csv  Pattern - Circular 4_RELATIVE.csv  Pattern - Circular 5_RELATIVE.csv  Pattern - Circular 8_RELATIVE.csv  extendedFLONG_RELATIVE.csv  flashStripes_RELATIVE.csv  gradRed2_RELATIVE.csv  gray_RELATIVE.csv  intermitentEF_RELATIVE.csv
test/Iris.Tests/data/TestVideos/: AreaTest.avi
test/Iris.Tests/include/: IrisLibTest.h
test/Iris.Tests/src/: CDLuminanceTest.cpp  FlashDetectionTests.cpp  FlashTest.cpp  FrameManagerTests.cpp  FrameRgbConverterTest.cpp  PatternDetectionTests.cpp  RedSaturationTests.cpp  RelativeLuminanceTest.cpp  TransitionEvaluatorTest.cpp  TransitionTrackerByFPSTests.cpp  TransitionTrackerByTimeTests.cpp  TransitionTrackerTests.cpp  VideoAnalysisTests.cpp
utils/: CMakeLists.txt
utils/include/utils/: BaseLog.h  FrameConverter.h  JsonWrapper.h
utils/src/: BaseLog.cpp  FrameConverter.cpp
